--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.620.0",
     "body-parser": "^1.20.2",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "expess": "^0.0.1-security",
     "express": "^4.19.2",
