--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID=AKIAQ3EGQ32NGMKDEH5W
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
-NEWSAPI_KEY=d45aea3af4da49d9b95ff9813443038c
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+NEWSAPI_KEY=
